---------------------------------- 2025-08-13 14:16:08 25.8.13
no failed: wireguard over ipv4
qc pass: wireguard over ipv4
---------------------------------- 2025-08-13 19:52:15 25.8.13
no qc pass: wireguard over ipv6
failed: wireguard over ipv6
---------------------------------- 2025-08-13 21:20:59 25.8.13
no failed: wireguard over ipv6
qc pass: wireguard over ipv6
---------------------------------- 2025-08-14 10:03:16 25.8.14
no qc pass: wireguard over ipv6
failed: wireguard over ipv6
---------------------------------- 2025-08-14 12:46:45 25.8.14
no failed: wireguard over ipv6
qc pass: wireguard over ipv6
---------------------------------- 2025-08-14 14:17:10 25.8.14
no qc pass: wireguard over wireguard
failed: wireguard over wireguard
---------------------------------- 2025-08-14 15:02:53 25.8.14
no failed: wireguard over wireguard
qc pass: wireguard over wireguard
---------------------------------- 2025-08-16 07:16:51 25.8.16
no qc pass: wireguard over wireguard
failed: wireguard over wireguard
---------------------------------- 2025-08-16 08:03:20 25.8.16
no failed: wireguard over wireguard
qc pass: wireguard over wireguard
---------------------------------- 2025-08-16 17:30:42 25.8.16
no qc pass: dhcp with excluded address
failed: dhcp with excluded address
---------------------------------- 2025-08-16 19:09:43 25.8.16
no failed: dhcp with excluded address
qc pass: dhcp with excluded address
---------------------------------- 2025-08-17 14:19:36 25.8.17
no qc pass: wireguard over wireguard
failed: wireguard over wireguard
---------------------------------- 2025-08-17 14:55:11 25.8.17
no failed: wireguard over wireguard
qc pass: wireguard over wireguard
---------------------------------- 2025-08-20 20:59:50 25.8.20
no qc pass: wireguard over asymmetric ports
failed: wireguard over asymmetric ports
---------------------------------- 2025-08-20 21:35:43 25.8.20
no failed: wireguard over asymmetric ports
qc pass: wireguard over asymmetric ports