@@ -17480,3 +17480,6 @@ failed: wireguard over asymmetric ports
 ---------------------------------- 2025-08-20 21:35:43 25.8.20
 no failed: wireguard over asymmetric ports
 qc pass: wireguard over asymmetric ports
+---------------------------------- 2025-08-25 19:40:53 25.8.25
+no qc pass: wireguard over asymmetric ports
+failed: wireguard over asymmetric ports
